# retirement

./: README.md  pyproject.toml  returns.csv
retirement/: __init__.py  accounts.py  bond_returns.json  inflation.json  inflation_list.json  simulation.py  stock_returns.json  tax.py  year.py
test/: test_accounts.py  test_tax.py  test_year.py
